--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-  background-color: black;
+  background-color: transparent;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -13,10 +13,11 @@
   background-image: url(images/wallpaperflare.com_wallpaper.jpg);
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
-  padding: 10px 10%;
+  padding: 30px 10%;
 }
 
 nav {
@@ -33,4 +34,33 @@ nav ul li{
 nav ul li a {
   text-decoration: none;
   font-size: 18px;
+}
+
+nav ul li a:hover {
+  color: #eb5e28;
+}
+
+.header-text {
+  margin-top: 70vh;
+  text-align: center;
+}
+
+.header-text h1{
+  margin-bottom: 15px;
+  font-size: 80px;
+}
+
+.highlight {
+  color: #eb5e28;
+}
+
+
+
+
+
+
+.overview-home-page {
+  width: 100%;
+  background-color: white;
+  height: 600px;
 }
