--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@
   background-repeat: no-repeat;
 }
 
+#header-about {
+  width: 100%;
+  height: 100vmax;
+  background-color: black;
+}
+
 .container {
   padding: 30px 10%;
 }
@@ -32,12 +38,13 @@ nav ul li{
 }
 
 nav ul li a {
+  color: #fff;
   text-decoration: none;
   font-size: 18px;
 }
 
 nav ul li a:hover {
-  color: #eb5e28;
+  color: #ff3366;
 }
 
 .header-text {
@@ -51,16 +58,80 @@ nav ul li a:hover {
 }
 
 .highlight {
-  color: #eb5e28;
+  color: #ff3366;
 }
 
-
-
-
-
-
-.overview-home-page {
+.about-me {
+  margin: 150px 150px;
   width: 100%;
-  background-color: white;
-  height: 600px;
 }
+
+.container-about-me {
+  
+  display: flex;
+  width: 100%;
+  height: 300px;
+  margin-bottom: 300px;
+}
+
+.category-1 {
+  border-bottom: 1px dashed grey;
+  width: 200px;
+  height: 150px;
+}
+
+.category-1-header {
+  border-left: 1px dashed grey;
+  padding-left: 70px;
+  padding-top: 50px;
+  width: 100%;
+}
+
+.category-1-header p {
+  font-size: 80px;
+}
+
+.category-1-text p {
+  width: 1000px;
+  margin-top: 70px;
+  font-size: 24px;
+}
+
+.category-2 {
+  border-bottom: 1px dashed grey;
+  width: 200px;
+  height: 150px;
+}
+
+.category-2-header {
+  border-left: 1px dashed white;
+  padding-left: 70px;
+  padding-top: 50px;
+  width: 100%;
+}
+
+.category-2-header p {
+  font-size: 80px;
+}
+
+.category-2-text p {
+  width: 1000px;
+  margin-top: 70px;
+  font-size: 24px;
+}
+
+.category-1-images {
+  width: 900px;
+  margin-top: 50px;
+}
+
+.container-1-imgs {
+  display: flex;
+}
+
+.container-1-imgs img {
+  width: 300px;
+  margin: 0 15;
+}
+
+
