--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 
 #header-about {
   width: 100%;
-  height: 100vmax;
+  height: 2600px;
   background-color: black;
 }
 
@@ -71,7 +71,7 @@ nav ul li a:hover {
   display: flex;
   width: 100%;
   height: 300px;
-  margin-bottom: 300px;
+  margin-bottom: 700px;
 }
 
 .category-1 {
@@ -97,6 +97,20 @@ nav ul li a:hover {
   font-size: 24px;
 }
 
+.category-1-images {
+  width: 900px;
+  margin-top: 50px;
+}
+
+.container-1-imgs {
+  display: flex;
+}
+
+.container-1-imgs img {
+  width: 300px;
+  margin: 0 15;
+}
+
 .category-2 {
   border-bottom: 1px dashed grey;
   width: 200px;
@@ -120,18 +134,20 @@ nav ul li a:hover {
   font-size: 24px;
 }
 
-.category-1-images {
+.category-2-images {
   width: 900px;
   margin-top: 50px;
 }
 
-.container-1-imgs {
+.container-2-imgs {
   display: flex;
 }
 
-.container-1-imgs img {
-  width: 300px;
+.container-2-imgs img {
+  width: 400px;
   margin: 0 15;
 }
+
+
 
 
